tests/conformance/valid/matrix_list.hedl
%VERSION: 1.0
%STRUCT: T: [id,v]
---
d: @T
  |x,1
