tests/conformance/invalid/unresolved_reference.hedl
%VERSION: 1.0
%STRUCT: T: [id,ref]
---
data: @T
  |a,@nonexistent
